updated tools lsite

--- a/.toolsrc
+++ b/.toolsrc
@@ -1,58 +1,101 @@
 https://github.com/Hackplayers/4nonimizer.git
+https://github.com/fcolista/alpine-metasploit.git
 https://github.com/styx00/Apache-Vulns.git
 https://github.com/michenriksen/aquatone.git
+https://github.com/bettercap/caplets.git
+https://github.com/0x646e78/bluesniff.git
 https://github.com/artemkin/cisco-password-decoder.git
 https://github.com/nccgroup/cisco-SNMP-enumeration.git
 https://github.com/Dionach/CMSmap.git
+git@github.com:lp1dev/colcat.git
+https://github.com/FenrirSec/CompanyPasswordGen.git
+https://github.com/Gamithra/credit-card-game.git
+https://github.com/teeknofil/Crisis-Wordlist-Generator.git
+https://github.com/m8r0wn/crosslinked
+https://github.com/Rhynorater/CVE-2018-15473-Exploit.git
 https://github.com/haicen/DahuaHashCreator.git
 https://github.com/UltimateHackers/Decodify.git
 https://github.com/miohtama/desfire.git
 https://github.com/Nekmo/dirhunt.git
 https://github.com/Quitten/doser.py.git
+git@github.com:lp1dev/Downloader.git
+https://github.com/D4Vinci/Dr0p1t-Framework.git
 https://github.com/droope/droopescan.git
 https://github.com/ThoughtfulDev/EagleEye
+https://github.com/BC-SECURITY/Empire.git
 https://github.com/BlackMathIT/Esteemaudit-Metasploit.git
+https://github.com/offensive-security/exploitdb.git
 https://github.com/FortyNorthSecurity/EyeWitness.git
+git@github.com:FenrirSec/fenrir-tools.git
 https://github.com/Manisso/fsociety.git
 https://github.com/michenriksen/gitrob
+https://github.com/internetwache/GitTools.git
 https://github.com/OJ/gobuster.git
 https://github.com/Quantika14/guasap-whatsapp-foresincs-tool
+https://github.com/khast3x/h8mail.git
+https://github.com/staz0t/hashcatch.git
 https://github.com/psypanda/hashID.git
 https://github.com/zant95/hBlock.git
 https://github.com/trimstray/htrace.sh.git
 https://github.com/mozilla/http-observatory
+git@github.com:FenrirSec/ICMP_tunnel.git
+https://github.com/stolk/imcat.git
 https://github.com/entropy1337/infernal-twin.git
+https://github.com/kubo/injector.git
+https://github.com/leapsecurity/InSpy.git
+https://github.com/skylot/jadx.git
+https://github.com/rezasp/joomscan.git
+https://github.com/jrnl-org/jrnl.git
+https://github.com/Sjord/jwtcrack.git
 https://github.com/AlessandroZ/LaZagne.git
 https://github.com/lesspass/lesspass.git
+https://github.com/varchashva/LetsMapYourNetwork.git
 https://github.com/RobinDavid/LSB-Steganography.git
 https://github.com/CISOfy/lynis.git
 https://github.com/blechschmidt/massdns.git
+https://github.com/laramies/metagoofil.git
 https://github.com/nfc-tools/mfcuk.git
 https://github.com/nfc-tools/mfoc.git
+https://github.com/vk496/mfoc
+https://github.com/ilumitr/miLazyCracker
+https://github.com/sullo/nikto.git
+https://github.com/FenrirSec/parallel_brute.git
+https://github.com/swisskyrepo/PayloadsAllTheThings.git
+https://github.com/Sh0ckFR/Pentestor.git
+git@github.com:FenrirSec/php_shell_detector.git
 https://github.com/ProtonVPN/protonvpn-cli.git
+https://github.com/Proxmark/proxmark3.git
 https://github.com/lp1dev/proxy-grabber.git
 https://github.com/zerstoeren/rdp-scan.git
+https://github.com/x90skysn3k/rdpscraper.git
 https://github.com/UltimateHackers/ReconDog.git
 https://github.com/jobertabma/relative-url-extractor.git
+git@github.com:FenrirSec/RemoteCShell.git
+https://github.com/SpiderLabs/Responder.git
 https://github.com/danielmiessler/SecLists.git
 https://github.com/thewhiteh4t/seeker.git
+https://github.com/sherlock-project/sherlock.git
 https://github.com/duckythescientist/SmoothLife.git
+https://github.com/1N3/Sn1per.git
 https://github.com/sqlmapproject/sqlmap.git
 https://github.com/UltimateHackers/sqlmate.git
 https://github.com/UltimateHackers/Striker.git
 https://github.com/aboul3la/Sublist3r.git
 https://github.com/drwetter/testssl.sh
+https://github.com/laramies/theHarvester.git
 https://github.com/lp1dev/todo.git
+https://github.com/r00t-3xp10it/trojanizer.git
+https://github.com/andresriancho/w3af.git
+https://github.com/EnableSecurity/wafw00f.git
 https://github.com/tomnomnom/waybackurls.git
 https://github.com/xperseguers/webapp-fingerprint.git
+https://github.com/whid-injector/whid-31337.git
+https://github.com/GDSSecurity/Windows-Exploit-Suggester.git
+https://github.com/emadshanab/WordLists-20111129.git
 https://github.com/wpscanteam/wpscan.git
 https://github.com/wg/wrk.git
 https://github.com/Moham3dRiahi/XAttacker.git
 https://github.com/deviavir/zenbot.git
-https://github.com/emadshanab/WordLists-20111129.git
-https://github.com/khast3x/h8mail.git
-https://github.com/m8r0wn/crosslinked
-https://github.com/Rhynorater/CVE-2018-15473-Exploit.git
 https://github.com/swisskyrepo/PayloadsAllTheThings.git
 https://github.com/x90skysn3k/rdpscraper.git
 https://github.com/alessandrodd/apk_api_key_extractor.git
